Refactoring IO classes to work for both games and updating sliding game to extend abstract classes/use IO classes